fix PR/41136: \<word search doesn't work in vi don't reuse RCHAR_T(=wchar_t)'s bits, CSI wchar_t is opaque object.